--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+<meta name="google-site-verification" content="LBwDdBzuSqUSlG5ye_63PKx07Sbe_zv9GOeOAESYYPY" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Algerie-Market | منصة الإعلانات الأولى في الجزائر</title>
