--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Algerie-Market | منصة الإعلانات الأولى في الجزائر</title>
   <meta name="description" content="منصة الإعلانات المجانية الأولى في الجزائر - بيع وشراء سيارات، عقارات، إلكترونيات في كل ولايات الجزائر">
-  <meta name="keywords" content="إعلانات الجزائر, بيع وشراء, سيارات للبيع, عقارات الجزائر, algerie market">
+  <meta name="keywords" content="سوق الجزائر, إعلانات الجزائر, بيع وشراء, سيارات للبيع, عقارات الجزائر, souq algerie, algerie market, إعلانات مجانية">
+  <meta name="robots" content="index, follow">
   <meta property="og:title" content="Algerie-Market | إعلانات مجانية في الجزائر">
   <meta property="og:description" content="أنشر إعلانك مجاناً في كل ولايات الجزائر">
+  <meta property="og:type" content="website">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -215,7 +219,7 @@
 
 <footer>
   <div class="footer-logo">Algerie-Market 🛒</div>
-  <p>© 2024 Algerie-Market - منصة الإعلانات المجانية الجزائرية</p>
+  <p>© 2025 Algerie-Market - منصة الإعلانات المجانية الجزائرية</p>
 </footer>
 
 <div class="toast" id="toast"></div>
@@ -464,7 +468,6 @@
     const btn=document.getElementById('submitBtn');
     btn.disabled=true; btn.textContent='⏳ جاري النشر...';
     try {
-      // رفع الصور عبر Imgur مجاناً
       let imgUrls=[];
       for (const img of selectedImgs) {
         try {
@@ -622,4 +625,4 @@
   loadAds();
 </script>
 </body>
-                                                                                   </html>
+                                  </html>
