--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  !-- Open Graph -->
+<meta property="og:title" content="بيع وشراء مجاني في الجزائر | Algerie-Market" />
+<meta property="og:description" content="أنشر إعلانك مجاناً في كل ولايات الجزائر" />
+<meta property="og:image" content="https://algerie-market.github.io/market-algerie/og-image.jpg" />
+<meta property="og:url" content="https://algerie-market.github.io/market-algerie/" />
+<meta property="og:type" content="website" />
 <meta name="google-site-verification" content="LBwDdBzuSqUSlG5ye_63PKx07Sbe_zv9GOeOAESYYPY" />
   <meta charset="UTF-8">
   <link rel="icon" type="image/png" href="favicon.ico">
