--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta property="og:title" content="بيع وشراء مجاني في الجزائر | Algerie-Market" />
 <meta property="og:description" content="أنشر إعلانك مجاناً في كل ولايات الجزائر" />
-<meta property="og:image" content="https://algerie-market.github.io/market-algerie/og-image.jpg" />
+<meta property="og:image" content="https://algerie-market.github.io/market-algerie/Algerie%20Market%20buy%20and%20sell%20app_20260226_015656_0000.jpg" />
 <meta property="og:url" content="https://algerie-market.github.io/market-algerie/" />
 <meta property="og:type" content="website" />
 <meta name="google-site-verification" content="LBwDdBzuSqUSlG5ye_63PKx07Sbe_zv9GOeOAESYYPY" />
